Fixed : Body was overlapping with header

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,12 @@
 
 /* Generic classes */
 
+body {
+	position: relative;
+	padding-top: 90px;
+	background-color: white;
+}
+
 .right {
     text-align: right;
 }
